Bug 3766: HeapStats Analyzer plugin does not work Reviewed-by: ykubota https://icedtea.classpath.org/bugzilla/show_bug.cgi?id=3766 Closes #152